test/conformance/chainsaw/events/clusterpolicy/generate-events-upon-successful-mutation/resource.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: game-demo
data:
  key: "some value"
