test/conformance/chainsaw/events/clusterpolicy/generate-events-upon-successful-mutation/event-assert.yaml
apiVersion: v1
kind: Event
metadata:
  namespace: default
involvedObject:
  apiVersion: kyverno.io/v1
  kind: ClusterPolicy
  name: add-labels
type: Normal
reason: PolicyApplied
action: Resource Mutated
reportingComponent: kyverno-admission
