test/conformance/chainsaw/events/clusterpolicy/generate-events-upon-successful-mutation/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-labels
spec: {}
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
